Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9088

Server crashes on shutdown after the second post of feedback report

    XMLWordPrintable

Details

    • 10.0.23

    Description

      See also MDEV-9087 about debug build – there it fails right after the second post, while here it crashes on server shutdown.
      Reproducible with the dynamic plugin.
      cmake . && make -j3

      151105 19:51:26 [Note] feedback plugin: report to 'https://mariadb.org/feedback_plugin/post' was sent
      151105 19:51:27 [Note] feedback plugin: server replied 'ok'
      151105 19:54:29 [Note] feedback plugin: report to 'https://mariadb.org/feedback_plugin/post' was sent
      151105 19:54:35 [Note] feedback plugin: server replied 'ok'
      151105 20:08:27 [Note] /home/elenst/git/10.0-bug2/sql/mysqld: Normal shutdown
       
      151105 20:08:27 [Note] Event Scheduler: Purging the queue. 0 events
      151105 20:08:28 [Note] feedback plugin: report to 'https://mariadb.org/feedback_plugin/post' was sent
      151105 20:08:28 [ERROR] mysqld got signal 11 ;

      Thread 1 (Thread 0x7f894eff9700 (LWP 6851)):
      #0  0x00007f8977af9f8c in pthread_kill () from /lib/x86_64-linux-gnu/libpthread.so.0
      #1  0x00000000006ec3f2 in handle_fatal_signal (sig=11) at sql/signal_handler.cc:262
      #2  <signal handler called>
      #3  0x000000000058f7b5 in thd_wait_begin (thd=0x7f894d0c4008, wait_type=<optimised out>) at sql/sql_class.cc:4557
      #4  0x0000000000af209f in vio_io_wait (vio=vio@entry=0x7f894d041208, event=VIO_IO_EVENT_READ, timeout=60000) at vio/viosocket.c:967
      #5  0x0000000000af2148 in vio_socket_io_wait (vio=vio@entry=0x7f894d041208, event=<optimised out>) at vio/viosocket.c:108
      #6  0x0000000000af2c51 in vio_ssl_read (vio=0x7f894d041208, buf=0x7f894eff7d30 "POST /feedback_plugin/post HTTP/1.0\r\nUser-Agent: MariaDB User Feedback Plugin\r\nHost: mariadb.org:443\r\nAccept: */*\r\nContent-Length: 280\r\nContent-Type: multipart/form-data; boundary=", '-' <repeats 20 times>..., size=<optimised out>) at vio/viossl.c:155
      #7  0x00007f89764d55ec in feedback::Url_http::send (this=0x7f8975cd6d30, data=0x7f894d012008 "FEEDBACK_SERVER_UID\t/zAqDR9PHkV223/Obu2tCd/0E4E=\nFEEDBACK_WHEN\tshutdown\nFEEDBACK_USER_INFO\t\n\ntCd/0E4E=\nPERFORMANCE_SCHEMA_EVENTS_WAITS_HISTORY_LONG_SIZE\t-1\nLARGE_PAGES\tOFF\nINNODB_FLUSH_LOG_AT_TIMEOUT\t"..., data_length=93) at plugin/feedback/url_http.cc:269
      #8  0x00007f89764d3423 in feedback::send_report (when=when@entry=0x7f89764d6991 "shutdown") at plugin/feedback/sender_thread.cc:242
      #9  0x00007f89764d5069 in feedback::background_thread (arg=<optimised out>) at plugin/feedback/sender_thread.cc:296
      #10 0x00007f8977af4e9a in start_thread () from /lib/x86_64-linux-gnu/libpthread.so.0
      #11 0x00007f89769e4cbd in clone () from /lib/x86_64-linux-gnu/libc.so.6

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.25h
                  1.25h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.