sql/sql_table.cc
@@ -1674,8 +1674,6 @@ void execute_ddl_log_recovery()
   mysql_mutex_unlock(&LOCK_gdl);
   thd->reset_query();
   delete thd;
-  /* Remember that we don't have a THD */
-  set_current_thd(0);
   DBUG_VOID_RETURN;
 }
 
